samples/_failures_safe/1761478153_7f0b6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70cb46cc.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_70cb46cc.c:147: error: expected ‘{’ at end of input
